--- a/abdomen.html
+++ b/abdomen.html
@@ -8,11 +8,11 @@
     هو موقع لخدمة أهالي مدينة ههيا بمحافظة الشرقية.
     هذا الموقع سيسهل على الناس معرفة العيادات الموجودة في المدينة ومواقعها ووسائل التواصل معها.">
     <title>عيادات مدينة ههيا</title>
-    <link rel="shortcut icon" href="../images/pngwing2.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./images/pngwing2.png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=El+Messiri:wght@400;500;600;700&family=Open+Sans:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/all.css">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="./css/bootstrap.min.css">
+    <link rel="stylesheet" href="./css/all.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <!-- ****start navbar****** -->
@@ -28,10 +28,10 @@
                       <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0 fw-bolder">
                           <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="../index.html">الرئيسية</a>
+                            <a class="nav-link" aria-current="page" href="./index.html">الرئيسية</a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="../clinics.html">العيادات</a>
+                            <a class="nav-link" aria-current="page" href="./clinics.html">العيادات</a>
                           </li>
                           <li class="nav-item">
                             <a class="nav-link disabled text-decoration-line-through" aria-current="page" href="#">معامل الأشعة</a>
