hehia-clinics-commit-4

--- a/clinics.html
+++ b/clinics.html
@@ -58,7 +58,7 @@
         <div class="container-fluid mt-5 pt-5">
             <nav aria-label="breadcrumb">
               <ol class="breadcrumb">
-                <li class="breadcrumb-item mx-2"><a href="/index.html"><i class="fa-solid fa-house fa-xl"></i></a></li>
+                <li class="breadcrumb-item mx-2"><a href="index.html"><i class="fa-solid fa-house fa-xl"></i></a></li>
                 <li class="breadcrumb-item active">العيادات</li>
               </ol>
             </nav>
