--- a/womans.html
+++ b/womans.html
@@ -57,8 +57,8 @@
     <div class="container-fluid mt-5 pt-5">
         <nav aria-label="breadcrumb">
           <ol class="breadcrumb">
-            <li class="breadcrumb-item mx-2"><a href="/index.html"><i class="fa-solid fa-house fa-xl"></i></a></li>
-            <li class="breadcrumb-item"><a class="text-decoration-none" href="/clinics.html">العيادات</a></li>
+            <li class="breadcrumb-item mx-2"><a href="index.html"><i class="fa-solid fa-house fa-xl"></i></a></li>
+            <li class="breadcrumb-item"><a class="text-decoration-none" href="clinics.html">العيادات</a></li>
             <li class="breadcrumb-item active" aria-current="page">عيادات النساء والتوليد</li>
           </ol>
         </nav>
@@ -124,7 +124,7 @@
                         <div class="row">
                             <div class="col-md-6">
                               <p class="fw-bold">أخصائي التوليد وأمراض النساء والعقم</p>
-                              <p class="text-danger fw-bold">ماجستير التوليد وأمراض النساء بمستشفيات جامعة الأزهر</p>
+                              <p class="fw-bold">ماجستير التوليد وأمراض النساء بمستشفيات جامعة الأزهر</p>
                               <p class="text-danger fw-bold">للحجز والإستفسار يرجى الإتصال على</p>
                               <p class="fw-bold"><span class="ms-2 fs-5"><i class="fa-solid fa-phone"></i></span><a class="text-decoration-none text-primary fs-4" href="tel:+201202034335">01202034335</a></p>
                               <p class="fw-bold"><span class="ms-2 fs-5"><i class="fa-solid fa-location-dot"></i></span>شارع أحمد عرابي - أمام صيدلية الدكتور مصطفي محمود زعزوع - فوق فيراري لتأجير السيارات</p>
@@ -156,6 +156,6 @@
         <p class="text-center">حقوق الطبع والنشر <span>2023</span>  &copy; بواسطة ضياء عبدالعزيز<br/> جميع الحقوق محفوظة</p>
       </footer>
 
-<script src="../js/bootstrap.min.js"></script>   
+<script src="./js/bootstrap.min.js"></script>   
 </body>
 </html>
