--- a/abdomen.html
+++ b/abdomen.html
@@ -21,17 +21,17 @@
             <div class="container">
                 <nav class="navbar navbar-expand-lg">
                     <div class="container-fluid">
-                      <h1><a class="navbar-brand fw-bolder" href="/index.html">عيادات مدينة ههيا</a></h1>
+                      <h1><a class="navbar-brand fw-bolder" href="index.html">عيادات مدينة ههيا</a></h1>
                       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <i class="fa-solid fa-bars"></i>
                       </button>
                       <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0 fw-bolder">
                           <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="./index.html">الرئيسية</a>
+                            <a class="nav-link" aria-current="page" href="index.html">الرئيسية</a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="./clinics.html">العيادات</a>
+                            <a class="nav-link" aria-current="page" href="clinics.html">العيادات</a>
                           </li>
                           <li class="nav-item">
                             <a class="nav-link disabled text-decoration-line-through" aria-current="page" href="#">معامل الأشعة</a>
@@ -162,6 +162,6 @@
         <p class="text-center">حقوق الطبع والنشر <span>2023</span>  &copy; بواسطة ضياء عبدالعزيز<br/> جميع الحقوق محفوظة</p>
       </footer>
 
-<script src="../js/bootstrap.min.js"></script>   
+<script src="./js/bootstrap.min.js"></script>   
 </body>
 </html>
