--- a/dentist.html
+++ b/dentist.html
@@ -21,7 +21,7 @@
             <div class="container">
                 <nav class="navbar navbar-expand-lg">
                     <div class="container-fluid">
-                      <h1><a class="navbar-brand fw-bolder" href="/index.html">عيادات مدينة ههيا</a></h1>
+                      <h1><a class="navbar-brand fw-bolder" href="index.html">عيادات مدينة ههيا</a></h1>
                       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <i class="fa-solid fa-bars"></i>
                       </button>
@@ -57,8 +57,8 @@
     <div class="container-fluid mt-5 pt-5">
         <nav aria-label="breadcrumb">
           <ol class="breadcrumb">
-            <li class="breadcrumb-item mx-2"><a href="/index.html"><i class="fa-solid fa-house fa-xl"></i></a></li>
-            <li class="breadcrumb-item"><a class="text-decoration-none" href="/clinics.html">العيادات</a></li>
+            <li class="breadcrumb-item mx-2"><a href="index.html"><i class="fa-solid fa-house fa-xl"></i></a></li>
+            <li class="breadcrumb-item"><a class="text-decoration-none" href="clinics.html">العيادات</a></li>
             <li class="breadcrumb-item active" aria-current="page">عيادات الأسنان</li>
           </ol>
         </nav>
